// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/RadioGroup/Radio Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:ra:"
            class="Fieldset_srOnly__7qh39"
    >
      radio example
    </legend>
    <div class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rb:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r9:"
                 value
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rb:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r8:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:ru:"
            class="Fieldset_srOnly__7qh39"
    >
      radio example
    </legend>
    <div class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rv:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rt:"
                 aria-describedby="htmlId"
                 value
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rv:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rs:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r6:"
            class="Fieldset_srOnly__7qh39"
    >
      radio example
    </legend>
    <div class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R dummyClassname"
             lang="nb"
        >
          <input id="htmlId"
                 class="Radio_radioInput__gTlv0"
                 data-testid="123ID"
                 form="formid123"
                 type="radio"
                 name="radioInputName-:r5:"
                 value
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="htmlId"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r4:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithDescription play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:re:"
            class="Fieldset_srOnly__7qh39"
    >
      radio example
    </legend>
    <div class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rf:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rd:"
                 value
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rf:"
          >
            Enkeltpersonsforetak
            <span class="Radio_radioLabelDescription__29Ec0">
              En liten beskrivelse tekst
            </span>
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rc:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:ri:"
            class="Fieldset_srOnly__7qh39"
    >
      radio example
    </legend>
    <div class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rj:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rh:"
                 value
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rj:"
          >
            Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
            <span class="Radio_radioLabelDescription__29Ec0">
              Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
            </span>
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rg:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:rm:"
            class="Fieldset_srOnly__7qh39"
    >
      radio example
    </legend>
    <div class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rn:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rl:"
                 value
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rn:"
          >
            Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
            <span class="Radio_radioLabelDescription__29Ec0">
              Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
            </span>
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rk:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r2:"
            class="Fieldset_srOnly__7qh39"
    >
      radio example
    </legend>
    <div class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r3:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="dummyIdForwardedFromRef"
                 value
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r3:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r0:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithValue play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:rq:"
            class="Fieldset_srOnly__7qh39"
    >
      radio example
    </legend>
    <div class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rr:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rp:"
                 value="person"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rr:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:ro:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;
